--- a/www/templates/home/home.html
+++ b/www/templates/home/home.html
@@ -4,10 +4,12 @@
 
 <body>
 	<header id="cabecalho" class="borda">
-		<span id="logo" class="bloco"> </span>
-		<span id="campeonatos" class="bloco"> </span>
-		<span id="registrar" class="bloco"> </span>
-		<span id="login" class="bloco"> </span>
+		<ul id="barra">
+			<li id="logo" class="bloco"> </li>
+			<li id="campeonatos" class="bloco"> </li>
+			<li id="registrar" class="bloco"> </li>
+			<li id="login" class="bloco"> </li>
+		<ul>
 	</header>
 
 	<div id="campeonato" class="borda">
