Ajuste de cabeçalho (cores e centralização)

--- a/www/templates/home/home.html
+++ b/www/templates/home/home.html
@@ -4,23 +4,36 @@
 
 <body>
 	<header id="cabecalho" class="borda">
-		<ul id="barra">
-			<li id="logo" class="bloco"> </li>
-			<li id="campeonatos" class="bloco"> </li>
-			<li id="registrar" class="bloco"> </li>
-			<li id="login" class="bloco"> </li>
-		<ul>
+		<ul id="barra-comum" class="barra">
+			<li class="bloco-esquerda"> 
+				<a href="../home/home.html" id="link"> <img src="../../images/logo.png" id="logo"> </a> 
+			</li>
+			<li id="campeonatos" class="bloco bloco-esquerda"> 
+				<a href="" id="link"> Campeonatos </a> 
+			</li>
+		</ul>
+
+		<ul id="barra-registro" class="barra">
+			<li id="registrar" class="bloco bloco-direita"> 
+				<a href="../login/login.html" id="link"> Registrar </a> 
+			</li>
+			<li id="login" class="bloco bloco-direita"> 
+				<a href="" id="link"> Login </a> 
+			</li>
+		</ul>
 	</header>
 
-	<div id="campeonato" class="borda">
+	<section id="conteudo">
+		<div id="campeonato" class="borda">
 
-	</div>
+		</div>
 
-	<section id="noticias" class="borda centralizar">
+		<section id="noticias" class="borda centralizar">
 
-	</section>
+		</section>
 
-	<section id="patch" class="borda centralizar">
+		<section id="patch" class="borda centralizar">
 
+		</section>
 	</section>
 </body>
