--- a/www/css/stylesheet-c.css
+++ b/www/css/stylesheet-c.css
@@ -1,10 +1,3 @@
-.bloco {
-	display: table-cell;
-	float: left;
-	height: 100%;
-	width: 5%;
-}
-
 .borda {
 	border-width: 1px;
 	border-style: solid;
@@ -17,40 +10,95 @@
 	width: 45%;
 }
 
-#barra {
-	margin: 0;
-	padding: 0;
-}
+/***CABEÇALHO - início***/
+	.barra {
+		margin: 0;
+		padding: 0;
+	}
 
-#cabecalho {
-	background-color: #F2B1B1;
-	height: 4%;
-	position: relative;
-}
+	.bloco {
+		font-family: 'Josefin Sans', sans-serif;
+		font-size: 60px;
+		height: 100%;
+		padding-top: 0.6%;
+		text-align: center;
+		width: 5%;
+	}
 
-#campeonato {
-	background-image: url("../images/campeonato2.jpg");
-	background-repeat: no-repeat;
-	background-size: 100% 100%;
-	border-style: solid;
-	height: 40%;
-	margin: 2% 14.23% 0 14.23%;
-	position: relative;
-}
+	.bloco-direita {
+		float: right;
+	}
 
-#logo {
-	background-image: url("../images/logo.png");
-	background-repeat: no-repeat;
-	background-size: 100% 100%;
-	width: 2%;
-}
+	.bloco-esquerda {
+		float: left;
+	}
 
-#noticias {
-	border-style: solid;
-	left: 2.5%;
-}
+	#cabecalho {
+		background-color: #000;
+		color: #B1BC19;
+		height: 4%;
+		position: relative;
+	}
 
-#patch {
-	border-style: solid;
-	right: 2.5%;
-}
+	#logo {
+		height: 80%;
+		margin: 5% 1% 0% 5%;
+		padding: 0%;
+		text-align: left;
+		width: 50%;
+	}
+
+	#campeonatos {
+
+	}
+
+	#link {
+		text-decoration: none;
+	}
+
+	#link:active {
+		color: #B1BC19;
+	}
+
+	#link:link {
+		color: #B1BC19;
+	}
+
+	#link:hover {
+		color: #B1BC19;
+	}
+
+	#link:visited {
+		color: #B1BC19;
+	}
+
+	#registrar {
+
+	}
+
+	#login {
+
+	}
+/***CABEÇALHO - fim***/
+
+/***CONTEÚDO - início***/
+	#campeonato {
+		background-image: url("../images/campeonato2.jpg");
+		background-repeat: no-repeat;
+		background-size: 100% 100%;
+		border-style: solid;
+		height: 40%;
+		margin: 2% 14.23% 0 14.23%;
+		position: relative;
+	}
+
+	#noticias {
+		border-style: solid;
+		left: 2.5%;
+	}
+
+	#patch {
+		border-style: solid;
+		right: 2.5%;
+	}
+/***CONTEÚDO - fim***/
