--- a/www/templates/home/home.html
+++ b/www/templates/home/home.html
@@ -1,9 +1,9 @@
 <head>
-<link rel="stylesheet" href="../../css/stylesheet-c.css">
+	<link rel="stylesheet" href="../../css/stylesheet-c.css">
 </head>
 
 <body>
-	<header id="cabecalho" class="borda">
+	<header id="cabecalho">
 		<ul id="barra-comum" class="barra">
 			<li class="bloco-esquerda"> 
 				<a href="../home/home.html" id="link"> <img src="../../images/logo.png" id="logo"> </a> 
@@ -23,17 +23,15 @@
 		</ul>
 	</header>
 
-	<section id="conteudo">
-		<div id="campeonato" class="borda">
+	<div id="campeonato">
 
-		</div>
+	</div>
 
-		<section id="noticias" class="borda centralizar">
+	<section id="noticias" class="centralizar">
+		<p class="titulo"> Noticias Recentes </p>
+	</section>
 
-		</section>
-
-		<section id="patch" class="borda centralizar">
-
-		</section>
+	<section id="patch" class="centralizar">
+		<p class="titulo"> Novidades de patch </p>
 	</section>
 </body>
