--- a/www/templates/home/home.html
+++ b/www/templates/home/home.html
@@ -3,7 +3,9 @@
 </head>
 
 <body>
+	<!--> Todo o cabeçalho no topo da página <-->
 	<header id="cabecalho">
+		<!--> Barra para atividades básicas (independente de estar logado ou não) <-->
 		<ul id="barra-comum" class="barra">
 			<li class="bloco-esquerda"> 
 				<a href="../home/home.html" id="link"> <img src="../../images/logo.png" id="logo"> </a> 
@@ -13,6 +15,7 @@
 			</li>
 		</ul>
 
+		<!--> Barra para atividades de login/registro <-->
 		<ul id="barra-registro" class="barra">
 			<li id="registrar" class="bloco bloco-direita"> 
 				<a href="../login/login.html" id="link"> Registrar </a> 
@@ -23,14 +26,17 @@
 		</ul>
 	</header>
 
+	<!--> Foto de um campeonato abaixo do cabeçalho <-->
 	<div id="campeonato">
 
 	</div>
 
+	<!--> Bloco de notícias à esquerda <-->
 	<section id="noticias" class="centralizar">
 		<p class="titulo"> Noticias Recentes </p>
 	</section>
 
+	<!--> Bloco de notícias de patch à direita <-->
 	<section id="patch" class="centralizar">
 		<p class="titulo"> Novidades de patch </p>
 	</section>
