--- a/www/css/stylesheet-c.css
+++ b/www/css/stylesheet-c.css
@@ -17,8 +17,8 @@ body {
 	font-family: 'Titillium Web', sans-serif;
 	font-size: 60px;
 	height: 100%;
-	padding-top: 0.6%;
 	margin-top: -0.2%;
+	padding-top: 0.6%;
 	text-align: center;
 	width: 5%;
 }
@@ -41,6 +41,31 @@ body {
 	width: 35%;
 }
 
+/*Links referentes aos blocos no cabeçalho*/
+.link {
+	text-decoration: none;
+}
+
+/*Links referentes aos blocos no cabeçalho: um link no momento em que é "clicado"*/
+.link:active {
+	color: #B1BC19;
+}
+
+/*Links referentes aos blocos no cabeçalho: um link que nunca foi visitado*/
+.link:link {
+	color: #B1BC19;
+}
+
+/*Links referentes aos blocos no cabeçalho: um link quando o mouse está em cima dele*/
+.link:hover {
+	color: #B1BC19;
+}
+
+/*Links referentes aos blocos no cabeçalho: um link que o usuário já visitou*/
+.link:visited {
+	color: #B1BC19;
+}
+
 /*Estiliza os títulos de Notícias e Patch*/
 .titulo {
 	background-image: linear-gradient(90deg, #000, #0F1653 50%);
@@ -59,6 +84,12 @@ body {
 	color: #B1BC19; /*AMARELO*/
 	height: 4%;
 	position: relative;
+}
+
+/*Bloco do cabeçalho de 'Criar Campeonato'*/
+#criar-campeonato {
+	display: none;
+	width: 10%;
 }
 
 /*Imagem de logo que aparece no primeiro bloco do cabeçalho*/
@@ -83,31 +114,6 @@ body {
 /*Bloco Campeonatos que aparece no cabeçalho*/
 #campeonatos {
 	display: list-item;
-}
-
-/*Links referentes aos blocos no cabeçalho*/
-#link {
-	text-decoration: none;
-}
-
-/*Links referentes aos blocos no cabeçalho: um link no momento em que é "clicado"*/
-#link:active {
-	color: #B1BC19;
-}
-
-/*Links referentes aos blocos no cabeçalho: um link que nunca foi visitado*/
-#link:link {
-	color: #B1BC19;
-}
-
-/*Links referentes aos blocos no cabeçalho: um link quando o mouse está em cima dele*/
-#link:hover {
-	color: #B1BC19;
-}
-
-/*Links referentes aos blocos no cabeçalho: um link que o usuário já visitou*/
-#link:visited {
-	color: #B1BC19;
 }
 
 /*Bloco no cabeçalho referente ao login*/
