--- a/www/css/stylesheet-c.css
+++ b/www/css/stylesheet-c.css
@@ -3,7 +3,7 @@
 
 /*Background completo da página*/
 body {
-	background-color: #E1E6FA;
+	background-image: linear-gradient(0deg, #000, #FFF 700%);
 }
 
 /*Barra referente ao cabeçalho da página*/
