Lógica de troca de imagens da home-page

--- a/www/templates/home/home.html
+++ b/www/templates/home/home.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 	<link rel="stylesheet" href="../../css/stylesheet-c.css">
-	<script scr="../../js/home/home.js"> </script>
 </head>
 
 <body>
@@ -34,7 +33,7 @@
 
 	<!-- Foto de um campeonato abaixo do cabeçalho -->
 	<div id="campeonato">
-
+		<img src="../../images/imagem1.jpg" id="imagem">
 	</div>
 
 	<!-- Bloco de notícias à esquerda -->
@@ -47,6 +46,6 @@
 		<p class="titulo"> Novidades de patch </p>
 	</section>
 
-	<script scr="../../js/login/login.js"> </script>
+	<script src="../../js/home/home.js"></script>
 </body>
 </html>
