--- a/www/css/stylesheet-c.css
+++ b/www/css/stylesheet-c.css
@@ -93,6 +93,14 @@ li {
 	position: relative;
 }
 
+/*Imagem principal que aparece logo abaixo do cabeçalho*/
+#campeonato {
+	height: 2000px;
+	margin: 2% auto 5% auto;
+	position: relative;
+	text-align: center;
+}
+
 /*Bloco do cabeçalho de 'Criar Campeonato'*/
 #criar-campeonato {
 	/*display: none;*/
@@ -108,19 +116,14 @@ li {
 	width: 50%;
 }
 
-/*Imagem principal que aparece logo abaixo do cabeçalho*/
-#campeonato {
-	background-image: url("../images/imagem1.jpg");
-	background-repeat: no-repeat;
-	background-size: 100% 100%;
-	height: 1500px;
-	margin: 2% 20% 5% 20%;
-	position: relative;
-}
-
 /*Bloco Campeonatos que aparece no cabeçalho*/
 #campeonatos {
 	display: list-item;
+}
+
+/*Imagem de fundo abaixo do cabeçalho*/
+#imagem {
+	height: 100%;
 }
 
 /*Bloco no cabeçalho referente ao login*/
