--- a/www/templates/home/home.html
+++ b/www/templates/home/home.html
@@ -31,20 +31,52 @@
 		</ul>
 	</header>
 
+
 	<!-- Foto de um campeonato abaixo do cabeçalho -->
 	<div id="campeonato">
-		<img src="../../images/imagem1.jpg" id="imagem">
+		<img src="../../images/imagem2.jpg" id="imagem">
 	</div>
 
-	<!-- Bloco de notícias à esquerda -->
-	<section id="noticias" class="centralizar">
-		<p class="titulo"> Noticias Recentes </p>
-	</section>
 
-	<!-- Bloco de notícias de patch à direita -->
-	<section id="patch" class="centralizar">
-		<p class="titulo"> Novidades de patch </p>
-	</section>
+	
+	<div id="bloco-noticias">
+		<!-- Bloco de notícias à esquerda -->
+		<section id="noticias" class="centralizar">
+			<p class="titulo"> Noticias Recentes </p>
+
+			<section class="manchete manchete-noticia" id="noticia">
+				<img src="../../images/dota.png" class="imagens-manchete">
+				<h2 class="headline"> Jogadores de Dota descobrem o LoL e comecam a migrar para ele</h2>
+				<p class="conteudo"> Neste ultimo domingo, ao abrir o feed de noticias de seu facebook, Carlos Alberto, ex-jogador do jogo home-made conhecido como "Dota", se deparou com uma noticia do League of Legends. Ao pesquisar mais a respeito, ele ficou intrigado com os otimos efeitos graficos e alta jogabilidade do jogo, e contou para seus colegas a respeito. Todos espantandos, comecaram a abandonar o Dota e criaram contas no League of Legends. </p>
+			</section>
+
+			<section class="manchete manchete-noticia" id="noticia">
+				<img src="../../images/tempo.jpg" class="imagens-manchete">
+				<h2 class="headline"> Atualizacao do League of Legends ira levar agora menos dois dias </h2>
+				<p class="conteudo"> Mes passado, ao lancar o novo patch, a jogadora Jessica comecou a atualizar o seu jogo e, para isso, ela teve que deixar o seu computador ligado 24h por dia para atualizar o mais rapido possivel. Apos passados 7 dias que seu computador ficou ligado, a atualizacao terminou, entretanto, a atualizacao da semana seguinte ja havia sido lancada. Com o barraco gerado por ela via redes sociais, a comunidade League of Legends decidiu otimizar o seu processo de atualizacao. </p>
+			</section>
+		</section>
+
+		<!-- Bloco de notícias de patch à direita -->
+		<section id="patch" class="centralizar">
+			<p class="titulo"> Novidades de patch </p>
+
+			<section class="manchete manchete-patch" id="noticia">
+				<img src="../../images/master-yi.jpg" class="imagens-manchete">
+				<h2 class="headline"> Agora sera preciso mais de um dedo para jogar com Master Yi</h2>
+				<p class="conteudo"> Apos o acontecido da partida do sabado passado do CBLoL, em que o jogador Lucas deixou o seu copo de agua cair no teclado, o que fez o mesmo dar um pentakill enquanto jogava de Master Yi, a comunidade League of Legends decidiu fazer magias mais elaboradas para o campeao, com o objetivo de passar a exigir de seus jogadores alguma habilidade tecnica. Com o lancamento do patch, comecaram a ocorrer manifestos via Twitter, com o elevado uso das hashtags #voltaMasterYi #naoConsigoMaisJogar #deDiamanteParaBronze. </p>
+			</section>
+
+			<section class="manchete manchete-patch" id="noticia">
+				<img src="../../images/soraka.png	" class="imagens-manchete">
+				<h2 class="headline"> Soraka recebeu buff em suas magias </h2>
+				<p class="conteudo"> No ultimo patch lancado, a campea Soraka recebeu buff em suas magias apos a comunidade League of Legends perceber que os times que possuiam a campea como aliada tinham um win-rate de apenas 90%. Com o intuito de atingir 100%, a sua habilidade Q agora recebe um HoT que pode ser passado adiante para um aliado atraves da habilidade W. </p>
+			</section>
+		</section>
+
+		<div id="gif"> </div>
+	</div>
+
 
 	<script src="../../js/home/home.js"></script>
 </body>
