--- a/www/templates/home/home.html
+++ b/www/templates/home/home.html
@@ -25,8 +25,8 @@
 			</li>
 
 		<!-- Barra para 'Criar Campeonato' que só aparecerá para usuário logado -->
-			<li id="criar-campeonato" class="bloco bloco-direita">
-				<a href="" class="link"> Criar Campeonato </a>
+			<li class="bloco bloco-direita">
+				<a href="../criar-campeonato/criar-campeonato.html" class="link" id="criar-campeonato"> Criar Campeonato </a>
 			</li>
 		</ul>
 	</header>
