--- a/www/templates/home/home.html
+++ b/www/templates/home/home.html
@@ -11,7 +11,7 @@
 	<header id="cabecalho">
 		<!-- Barra para atividades básicas (independente de estar logado ou não) -->
 		<ul class="barra">
-			<li class="bloco-esquerda"> 
+			<li class="bloco-esquerda" id="bloco-logo"> 
 				<a href="../home/home.html" class="link"> <img src="../../images/logo.png" id="logo" alt="Logo do site"> </a> 
 			</li>
 			<li class="bloco bloco-esquerda"> 
